@@ -25,7 +25,7 @@ return a list with all the links contained in the web page.
 @organization: Libresoft Research Group, Universidad Rey Juan Carlos
 @copyright:    Universidad Rey Juan Carlos (Madrid, Spain)
 @license:      GNU GPL version 2 or any later version
-@contact:      herraiz@gsyc.escet.urjc.es
+@contact:      libresoft-tools-devel@lists.morfeo-project.org
 """
 
 import htmllib
